# cutile-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  flake.nix
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: aws-gpu-guardrails.yml  pages.yml  pr.yml
cuda-async/: Cargo.toml  REACTOR_AB_REPORT.md  README.md
cuda-async/src/: cuda_graph.rs  device_box.rs  device_buffer.rs  device_context.rs  device_future.rs  device_operation.rs  launch.rs  lib.rs  loom_compat.rs  prelude.rs  reactor.rs  scheduling_policies.rs  slot_table.rs
cuda-async/tests/: concurrent_capture.rs  cuda_graph.rs  error_handling.rs  execute_once.rs  pool_allocation.rs  reactor_correctness.rs
cuda-bindings/: Cargo.toml  README.md  build.rs
cuda-bindings/src/: dyn_load.rs  lib.rs
cuda-core/: Cargo.toml  README.md
cuda-core/src/: api.rs  cudarc_shim.rs  lib.rs  runtime.rs
cuda-kernel-interface/: Cargo.toml  README.md
cuda-kernel-interface/src/: lib.rs
cuda-tile-rs/: README.md  build.rs
cuda-tile-rs/src/: util.rs
cutile/: Cargo.toml  README.md
cutile-benchmarks/: Cargo.toml  README.md
cutile-benchmarks/benches/: execution_lock.rs  fmha.rs  fmha_causal.rs  gemm.rs  launch_overhead.rs  rmsnorm.rs  softmax.rs
cutile-benchmarks/paper/: README.md
cutile-benchmarks/paper/app_exp1_work_distribution/bimodal_gemms_rust/: Cargo.toml
cutile-benchmarks/paper/app_exp1_work_distribution/bimodal_gemms_rust/src/: main.rs
cutile-benchmarks/paper/sec5_exp1_safety_overhead/rust/elemwise/: Cargo.toml
cutile-benchmarks/paper/sec5_exp2_execution_mode_overhead/: README.md  run_part_b.sh
cutile-benchmarks/paper/sec5_exp2_execution_mode_overhead/launch_overhead_rust/: Cargo.toml
cutile-book/: conf.py  index.md  requirements.txt
cutile-book/_static/css/: custom.css
cutile-book/appendix/: definitions.md  syntax-reference.md
cutile-book/guide/: async-execution.md  bounds-check-placement.md  data-model.md  debugging.md  device-operations.md  deviceop-reference.md  dsl-api.md  execution-model.md  interoperability.md  introduction.md  jit-compilation.md  memory-hierarchy.md  operations.md  performance-tuning.md  performance.md  thinking-in-tiles.md  tile-programming-model.md  working-with-data.md  writing-computations.md
cutile-book/reference/: deviceop-reference.md  dsl-api.md  glossary.md
cutile-book/tutorials/: 01-hello-world.md  02-vector-addition.md  03-saxpy.md  04-matrix-multiplication.md  05-fused-softmax.md  06-flash-attention.md  07-intro-to-async.md  08-data-parallel-mlp.md  09-pointer-addition.md  10-cuda-graphs.md  11-nvfp4-inference.md
cutile-compiler/: Cargo.toml  README.md
cutile-compiler/src/: bounds.rs  compile_api.rs  cuda_tile_runtime_utils.rs  error.rs  generics.rs  hints.rs  jit_cache.rs  jit_store.rs  kernel_entry_generator.rs  kernel_naming.rs  lib.rs  specialization.rs  specialization_tests.rs  syn_utils.rs  train_map.rs  type_aliases.rs  types.rs  validator.rs
cutile-compiler/src/compiler/: _function.rs  _module.rs  _type.rs  _value.rs  compile_assume.rs  compile_binary_op.rs  compile_block.rs  compile_cuda_tile_op.rs  compile_expression.rs  compile_global.rs  compile_inline.rs  compile_intrinsic.rs  compile_type.rs  shared_utils.rs  tile_rust_type.rs  utils.rs
cutile-compiler/tests/: compiler2_e2e.rs  golden_bytecode.rs  jit_cache.rs  jit_store.rs
cutile-examples/: Cargo.toml  README.md
cutile-examples/examples/: add_basic.rs  add_ptr.rs  add_refs.rs  async_add.rs  async_and_then_example.rs  async_device_op_example.rs  async_gemm.rs  async_mlp.rs  async_mlp_fused.rs  async_saxpy.rs  async_saxpy_unsafe.rs  batch_matmul.rs  book_examples.rs  compile_only.rs  cuda_graphs.rs  cuda_graphs_deviceop.rs  cudarc_interop.rs  dropout.rs  flash_attention.rs  flash_attention_causal.rs  gemm.rs  gemm_static.rs  hello_world.rs  interop.rs  jit_custom_store.rs  jit_disk_cache.rs  persistent_gemm.rs  rms_norm.rs  saxpy.rs  scale_ptr.rs  softmax.rs  tensor_permute.rs
cutile-examples/src/: cuda_utils.rs  lib.rs
cutile-ir/tests/: bytecode_determinism.rs  bytecode_fixtures.rs
cutile-macro/: README.md
cutile-macro/src/: _module.rs  error.rs  kernel_launcher_generator.rs  lib.rs  rank_instantiation.rs  rewrite_variadics.rs  shadow_dispatch.rs  types.rs  validate_dsl_syntax.rs
cutile/src/: _core.rs  _tileir.rs  api.rs  lib.rs  prelude.rs  tensor.rs  tile_kernel.rs  utils.rs
cutile/src/kernels/: _conversion.rs  _creation.rs
cutile/tests/: basics_and_inlining.rs  binary_math_ops.rs  bitwise_and_bitcast_ops.rs  compile_error_quality.rs  compile_only.rs  compiler2_parity.rs  compiler_diff.rs  control_flow_ops.rs  element_type_zero_jit.rs  global_memory.rs  gpu.rs  gpu_execution_ops.rs  integer_ops.rs  kernel_compiler.rs  load_tile_like_examples.rs  memory_and_atomic_ops.rs  nested_partition_mut.rs  num_tiles_jit.rs  optimization_hints.rs  partition_index_schedules.rs  pool_allocation.rs  reduce_scan_ops.rs  slice_non_divisible.rs  span_source_location.rs  specialization_bits.rs  tensor_and_matrix_ops.rs  tensor_reinterpret.rs  tensor_views.rs  type_conversion_ops.rs  type_inference_sanity.rs  unary_math_ops.rs  warmup.rs  warmup_suite.rs
cutile/tests/common/: mod.rs
cutile/tests/gpu/: add_basic.rs  add_ptr.rs  add_refs.rs  async_device_op.rs  async_saxpy_unsafe.rs  atomic_red_view.rs  book_snippets.rs  borrow_raw_parts.rs  error_quality.rs  future_drop.rs  global_counter.rs  inter_module.rs  jit_disk_cache.rs  mapped_partition_schedule_matrix.rs  mapped_partition_values.rs  tensor.rs  tensor_permute.rs  tensor_slicing.rs  warmup.rs  warmup_bench.rs
infra/aws-gpu/: .gitignore  AGENTS.md  README.md  bootstrap-iam.sh  down.sh  iam-policy.json  main.tf  outputs.tf  run-cutile-smoke.sh  ssh.sh  terraform.tfvars.example  up.sh  userdata.sh  variables.tf  versions.tf
scripts/: run_cpu_tests.sh  run_examples.sh  run_gpu_tests.sh
tile-ir/: Cargo.toml
tile-ir/tests/: bytecode_compat.rs  bytecode_validate.rs  bytecode_version.rs  decode_rejection.rs  dominance.rs  per_op_roundtrip.rs
(+34 files in other folders)
