[package]
name = "cutile-examples"
description = "Various cuTile Rust usage examples."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[features]
default = ["cuda"]
cuda = ["cutile/cuda", "dep:cuda-core", "dep:cuda-async", "dep:tokio", "dep:candle-nn"]

[dependencies]
cutile = { workspace = true }
cutile-compiler = { workspace = true }
cuda-core = { workspace = true, optional = true }
cuda-async = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
