[package]
name = "cutile"
description = "cuTile Rust lets programmers safely author and execute tile kernels directly in Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["mlir", "cutile", "cuda", "gpu", "async"]

[features]
default = ["cuda"]
cuda = ["dep:cuda-core", "dep:cuda-async", "cutile-compiler/cuda"]

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
anyhow = { workspace = true }
cutile-compiler = { workspace = true }
cutile-macro = { workspace = true }

# CUDA runtime dependencies; optional so cutile compiles on non-CUDA platforms.
cuda-core = { workspace = true, optional = true }
cuda-async = { workspace = true, optional = true }
