[package]
name = "launch-overhead-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
publish = false

[[bin]]
name = "launch_overhead"
path = "src/main.rs"

[[bin]]
name = "async_throughput"
path = "src/bin/async_throughput.rs"

[dependencies]
cuda-core = "0.2.0"
cuda-async = { version = "0.2.0", features = ["reactor"] }
cutile = "0.2.0"
cutile-macro = "0.2.0"
cutile-compiler = "0.2.0"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"

[workspace]

[patch.crates-io]
cuda-async = { path = "/home/elibol/dev/cutile-rs/cuda-async" }
cuda-core = { path = "/home/elibol/dev/cutile-rs/cuda-core" }
cuda-bindings = { path = "/home/elibol/dev/cutile-rs/cuda-bindings" }
cutile = { path = "/home/elibol/dev/cutile-rs/cutile" }
cutile-macro = { path = "/home/elibol/dev/cutile-rs/cutile-macro" }
cutile-compiler = { path = "/home/elibol/dev/cutile-rs/cutile-compiler" }
cutile-ir = { path = "/home/elibol/dev/cutile-rs/cutile-ir" }

